--- a/Technicality.online/Views/Showroom/Index.cshtml
+++ b/Technicality.online/Views/Showroom/Index.cshtml
@@ -10,12 +10,12 @@
     <li>@Html.ActionLink("AWS and Azure cloud hosting", "AwsAzureCloud")</li>
     <li>@Html.ActionLink("Credit Card Processing", "CreditCardProcessing")</li>
     <li>@Html.ActionLink("DevOps", "DevOps")</li>
-    <li>@Html.ActionLink("Email blasts", "EmailBlasts") (optimized to minimize being caught in spam filters)</li>
     <li>@Html.ActionLink("Google Analytics", "GoogleAnalytics")</li>
     <li>@Html.ActionLink("HTTPS (SSL)", "HTTPS") - to secure websites</li>
     <li>@Html.ActionLink("Integrated logins", "IntegratedLogins") with Facebook, Google, and Microsoft accounts</li>
     <li>@Html.ActionLink("Integrating applications", "IntegratingApplications") via APIs</li>
     <li>@Html.ActionLink("Mobile App Development", "Mobile") (including publishing to App/Play stores)</li>
+    <li>@Html.ActionLink("Notifications", "Notifications") (email and text)</li>
     <li>@Html.ActionLink("Recaptcha", "Recaptcha")</li>
     <li>@Html.ActionLink("SQL Server", "SqlServer")</li>
 </ul>
