DevOps article change

--- a/Technicality.online/Views/Showroom/Index.cshtml
+++ b/Technicality.online/Views/Showroom/Index.cshtml
@@ -9,7 +9,7 @@
     <li>@Html.ActionLink("ASP.Net and ASP.Net Core", "AspNet")</li>
     <li>@Html.ActionLink("AWS and Azure cloud hosting", "AwsAzureCloud")</li>
     <li>@Html.ActionLink("Credit Card Processing", "CreditCardProcessing")</li>
-    <li>@Html.ActionLink("DevOps", "DevOps")</li>
+    <li>@Html.ActionLink("DevOps", "DevOps")  - Continuous Integration/Continuous Deployment (CI/CD)</li>
     <li>@Html.ActionLink("Google Analytics", "GoogleAnalytics")</li>
     <li>@Html.ActionLink("HTTPS (SSL)", "HTTPS") - to secure websites</li>
     <li>@Html.ActionLink("Integrated logins", "IntegratedLogins") with Facebook, Google, and Microsoft accounts</li>
