Initial MVP draft

--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -3,25 +3,20 @@
 }
 
     <div class="jumbotron">
-        <h1 class="display-4">Is Your Technology Project in Trouble?</h1>
-        <p class="lead">Do you have unreasonable requirements or deadlines? You're in the right place!</p>
+        <h1 class="display-4">I make MVP software applications</h1>
+        <hr />
+        <p class="lead"><em>&quot;A Minimum Viable Product has just enough core features to effectively deploy the product, and no more.&quot;</em> - <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Wikipedia article</a></p>
     </div>
     <div class="row">
         <div class="col">
-            <img class="img-fluid" src="~/images/shutterstock_393015229.jpg" alt="Help" />
+            <img class="img-fluid" src="~/images/shutterstock_432008923.jpg" alt="Code" />
         </div>
         <div class="col">
-            <ul class="list-unstyled">
-                <li>Have you gotten sideways with a technology vendor?</li>
-                <li>Has a key employee quit and left you high and dry?</li>
-                <li>Is your project running long and feels like it won't ever get finished?</li>
-                <li>Do you need a new application built and rolled out yesterday?</li>
-            </ul>
-            <p class="h3">Things may not be as bad as they seem.</p>
-            <p>I've been in the technology business a long time. I'm equally comfortable dealing with your programmer, network admin, controller or CEO. Take a look around the site and if you think I might be able to help you, <a href="https://app.acuityscheduling.com/schedule.php?owner=13759965&appointmentType=3311265">set up an initial consultation</a>.</p>
+            <p>You've got an idea. You think you're really onto something, but before you invest a lot of your time and/or money (or try to talk others into investing with you) - you need a </p>
+            <h3>Proof of Concept.</h3>
+            <p>I've been in the technology business a long time. I've been a programmer, network administrator, CTO, and business owner. All of this experience helps me understand, design and build a working prototype quickly.</p>
+            <a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="MVPs" role="button">Learn more</a>
 
-
-                
         </div>
     </div>
     
