--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -4,14 +4,16 @@
 }
 
 
-<div class="text-center">
-    <img src="~/images/TechnicalityLogo.jpg" class="img-fluid" alt="Technicality" />
+    <div class="text-center">
+        <img src="~/images/TechnicalityLogo.jpg" class="img-fluid" alt="Technicality" />
 
-    <p>Technicality is the software development studio of <a href="https://jefftrotman.com/about">Jeff Trotman</a> and is located in Birmingham, AL.</p>
+        <p>Technicality is the software development studio of <a href="https://jefftrotman.com/about">Jeff Trotman</a> and is located in Birmingham, AL.</p>
 
-    <div id="contact"></div>
-    <p><a href="https://app.acuityscheduling.com/schedule.php?owner=13759965&appointmentType=3311265">Schedule an initial consultation</a></p>
-</div>
+        <p>I've been in the technology business a long time. I've been a programmer, network administrator, CTO, and business owner. All of this experience helps me understand, design and build a working prototype quickly.</p>
+
+        <div id="contact"></div>
+        <p><a href="https://app.acuityscheduling.com/schedule.php?owner=13759965&appointmentType=3311265">Schedule an initial consultation</a></p>
+    </div>
 
 <div class="text-center">
     <img class="img-fluid" src="~/images/shutterstock_101403709.jpg" />"
