--- a/Technicality.online/Views/Home/MVPs.cshtml
+++ b/Technicality.online/Views/Home/MVPs.cshtml
@@ -3,20 +3,8 @@
     ViewData["Title"] = "MVP";
 }
 
-<h1>Minimum Viable Products</h1>
-
-<p>One of the keys to rapid development is integrating with other tools and applications. With cloud computing and applications with APIs, it's easier (and cheaper) than ever to bring your idea to life. The key is understanding how everything works together. Here's a partial list of features I've used to build applications:</p>
-<ul>
-    <li>@Html.ActionLink("ASP.Net and ASP.Net Core", "AspNet")</li>
-    <li>@Html.ActionLink("AWS and Azure cloud hosting", "AwsAzureCloud")</li>
-    <li>@Html.ActionLink("Credit Card Processing", "CreditCardProcessing")</li>
-    <li>@Html.ActionLink("DevOps", "DevOps")  - Continuous Integration/Continuous Deployment (CI/CD)</li>
-    <li>@Html.ActionLink("Google Analytics", "GoogleAnalytics")</li>
-    <li>@Html.ActionLink("HTTPS (SSL)", "HTTPS") - to secure websites</li>
-    <li>@Html.ActionLink("Integrated Logins/SSO (Single Sign-On)", "IntegratedLogins") with Facebook, Google, and Microsoft accounts</li>
-    <li>@Html.ActionLink("Integrating applications", "IntegratingApplications") via APIs</li>
-    <li>@Html.ActionLink("Mobile App Development", "Mobile") (including publishing to App/Play stores)</li>
-    <li>@Html.ActionLink("Notifications", "Notifications") (email and text)</li>
-    <li>@Html.ActionLink("Recaptcha", "Recaptcha")</li>
-    <li>@Html.ActionLink("SQL Server", "SqlServer")</li>
-</ul>
+<h1 class="display-4">Minimum Viable Products</h1>
+<h4>So - what exactly is an MVP? Saving time and money sounds good. What's the catch?</h4>
+<p><p>An MVP doesn't have to have all the bells and whistles - just enough core functionality to validate your idea. If it's not core functionality, good enough is good enough.</p>
+<p>One of the keys to rapid development is integrating with other tools and applications. With cloud computing and applications with APIs, it's easier (and cheaper) than ever to bring your idea to life. The key is understanding how everything works together. <a asp-action="Index" asp-controller="Services">Click here for some examples of the building blocks I've used in the past.</a> </p>
+<a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="FAQs" role="button">Questions?</a>
