--- a/Technicality.online/Views/Home/Privacy.cshtml
+++ b/Technicality.online/Views/Home/Privacy.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h1 class="display-4">@ViewData["Title"]</h1>
 
 <p>Technicality.onine does not collect any personal information.</p> 
 <p>The site does use a cookie to track whether or not you have accepted our privacy policy so the warning doesn't keep popping up.</p>
