--- a/Technicality.online/Views/Projects/Index.cshtml
+++ b/Technicality.online/Views/Projects/Index.cshtml
@@ -3,17 +3,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="display-4">Projects</h1>
+<h1 class="display-4">Example Projects</h1>
 <div class="row">
-    <div class="col">
-        Here are some applications available to the public produced by Technicality:
+    <div class="col">A lot of the work I've done for clients isn't targeted for the public. Here are some examples of projects that I own so I'm free to share:
         <ul>
             <li>@Html.ActionLink("Circlebox.com", "Circlebox") - Web application to help leaders organize clubs and organizations</li>
             <li>@Html.ActionLink("RCMChannels.com", "RcmChannels") - Web application to help medical billing organizations track issues with their client physician practices</li>
             <li>@Html.ActionLink("BallparkPilgrims.com", "BallparkPilgrims") - Web application/community for baseball fans who enjoy visiting different stadiums</li>
             <li>@Html.ActionLink("Technicality Google Analytics", "GoogleAnalyticsWordPressPlugin") - WordPress plugin to inject Google Analytics tracking code</li>
             <li>@Html.ActionLink("Pitch Counter", "PitchCounter") - Android app to help youth baseball coaches track pitch counts</li>
-            <li>@Html.ActionLink("Atlas Keg Scanner", "AtlasKegScanner") - iOS app with barcode scanning to help track inventory</li>
         </ul>
     </div>
     <div class="col">
