--- a/Technicality.online/Views/Services/Index.cshtml
+++ b/Technicality.online/Views/Services/Index.cshtml
@@ -5,13 +5,11 @@
 
 
 
-<h1 class="display-4">Services</h1>
-<p class="lead">Do you have unreasonable requirements or deadlines? You're in the right place!</p>
-<hr class="my-4" />
+<h1 class="display-4">Building Blocks</h1>
 
 <div class="row">
     <div class="col">
-        Specializing in technology project rescue here are some specialties:<
+        One of the keys to rapid application development is being able to leverage existing components, services and technologies
         <ul>
             <li>@Html.ActionLink("ASP.Net and ASP.Net Core", "AspNet")</li>
             <li>@Html.ActionLink("AWS and Azure cloud hosting", "AwsAzureCloud")</li>
