--- a/Technicality.online/Views/Shared/_Layout.cshtml
+++ b/Technicality.online/Views/Shared/_Layout.cshtml
@@ -50,6 +50,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MVPs">MVPs</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQs">FAQs</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Examples</a>
                         </li>
                         <li class="nav-item">
