--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -3,19 +3,31 @@
 }
 
     <div class="jumbotron">
-        <h1 class="display-4">I make MVP software applications</h1>
+        <div class="row">
+            <div class="h1 display-4 col-10">
+                I make MVP software applications
+            </div>
+            <div class="col-2">
+                <figure class="figure">
+                    <img class="img-fluid rounded" src="~/images/Jeff.png" alt="Jeff Trotman" />
+                    <figcaption class="figure-caption text-right">Jeff Trotman</figcaption>
+
+                </figure>
+            </div>
+        </div>
         <hr />
         <p class="lead"><em>&quot;A Minimum Viable Product has just enough core features to effectively deploy the product, and no more.&quot;</em> - <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Wikipedia article</a></p>
+
     </div>
     <div class="row">
         <div class="col">
             <img class="img-fluid" src="~/images/shutterstock_432008923.jpg" alt="Code" />
         </div>
         <div class="col">
-            <p>You've got an idea. You think you're really onto something, but before you invest a lot of your time and/or money (or try to talk others into investing with you) - you need a </p>
-            <h3>Proof of Concept.</h3>
-            <p>I've been in the technology business a long time. I've been a programmer, network administrator, CTO, and business owner. All of this experience helps me understand, design and build a working prototype quickly.</p>
-            <a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="MVPs" role="button">Learn more</a>
+            <p>You've got an idea that requires software development. Maybe it's a new SAAS product. Maybe a specialized online portal that consumes a data feed from another product's API or a mobile app that will help you serve your existing customers.</p>
+            <p>You think you're really onto something, but you'd love some feedback. It's one thing to tell someone about your idea, but you will get more meaningful feedback from actual users. How can users test something that doesn't exist yet? You need a <b>Minimum Viable Product</b>.</p>
+           
+            <a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="MVPs" role="button">Learn More</a>
 
         </div>
     </div>
