--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -9,10 +9,10 @@
 
         <p>Technicality is the software development studio of <a href="https://jefftrotman.com/about">Jeff Trotman</a> and is located in Birmingham, AL.</p>
 
-        <p>I've been in the technology business a long time. I've been a programmer, network administrator, CTO, and business owner. All of this experience helps me understand, design and build a working prototype quickly.</p>
+        <p>I've been in the technology business a long time. I've been a programmer, network administrator, CTO, and business owner. All of this experience helps me understand, design and build working prototypes quickly.</p>
 
         <div id="contact"></div>
-        <p><a href="https://app.acuityscheduling.com/schedule.php?owner=13759965&appointmentType=3311265">Schedule an initial consultation</a></p>
+        <p><a asp-action="Consultation" asp-controller="Home">Schedule an initial consultation</a></p>
     </div>
 
 <div class="text-center">
