--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -4,8 +4,13 @@
 
     <div class="jumbotron">
         <div class="row">
-            <div class="h1 display-4 col-10">
-                I make MVP software applications
+            <div class="col-10">
+                <div class="row justify-content-center">
+                    <div class="h1 display-4">I build software MVPs</div>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="lead">(Minimum Viable Product)</div>
+                </div>
             </div>
             <div class="col-2">
                 <figure class="figure">
@@ -15,17 +20,19 @@
                 </figure>
             </div>
         </div>
+        
         <hr />
-        <p class="lead"><em>&quot;A Minimum Viable Product has just enough core features to effectively deploy the product, and no more.&quot;</em> - <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Wikipedia article</a></p>
+        <em>&quot;A Minimum Viable Product has just enough core features to effectively deploy the product, and no more.&quot;</em> - <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Wikipedia article</a>
 
     </div>
     <div class="row">
         <div class="col">
-            <img class="img-fluid" src="~/images/shutterstock_432008923.jpg" alt="Code" />
+            <img class="img-fluid" src="~/images/shutterstock_393015229.jpg" alt="Code" />
         </div>
         <div class="col">
             <p>You've got an idea that requires software development. Maybe it's a new SAAS product. Maybe a specialized online portal that consumes a data feed from another product's API or a mobile app that will help you serve your existing customers.</p>
-            <p>You think you're really onto something, but you'd love some feedback. It's one thing to tell someone about your idea, but you will get more meaningful feedback from actual users. How can users test something that doesn't exist yet? You need a <b>Minimum Viable Product</b>.</p>
+            <p>You think you're really onto something, but <b>software development is expensive</b> (Isn't it?) And - you don't really know anything about producing and hosting software.</p> 
+            <p>Before you spend a lot of money, you'd love some feedback to make sure your idea is as good as you think it is. It's one thing to tell someone about your idea, but you will get more meaningful feedback from actual users. How can users test something that doesn't exist yet? You need a <b>Minimum Viable Product</b>.</p>
            
             <a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="MVPs" role="button">Learn More</a>
 
