--- a/Technicality.online/Views/Toolbox/Notifications.cshtml
+++ b/Technicality.online/Views/Toolbox/Notifications.cshtml
@@ -14,4 +14,4 @@
 <p>Understanding and configuring <a href="https://en.wikipedia.org/wiki/Sender_Policy_Framework" target="_blank">Sender Policy Framework</a> (SPF) and <a href="https://en.wikipedia.org/wiki/DomainKeys_Identified_Mail" target="_blank">DomainKeys Identified Mail</a> (DKIM) is critical.</p>
 <p>I've had good luck working with service providers like <a href="https://sendgrid.com" target="_blank">SendGrid</a> and <a href="https://elasticemail.com" target="_blank">Elastic Email</a>. It's easier to let them focus on getting mail delivered.</p>
 <hr />
-<p>If you'd like to talk about improving your application's notification capabilities, <a href="https://app.acuityscheduling.com/schedule.php?owner=13759965">click here to schedule an initial consultation</a>.</p>
+<p>If you'd like to talk about improving your application's notification capabilities, <a asp-action="Consultation" asp-controller="Home">click here to schedule an initial consultation</a>.</p>
