--- a/Technicality.online/Views/Home/FAQs.cshtml
+++ b/Technicality.online/Views/Home/FAQs.cshtml
@@ -6,5 +6,13 @@
 <h1 class="display-4">Frequently Asked Questions</h1>
 <h4>What will it look like?</h4>
 <p>There's a good chance it will look kind of like this website, which uses <a href="https://getbootstrap.com" target="_blank">Bootstrap</a>. Bootstrap is a User Interface library developed by Twitter years ago to make it easier for web designers to make their sites look good on mobile phones. A lot of designers don't like Bootstrap. I'm not artistic and find it to be "good enough".</p>
-<h4>why are you faster?</h4>
-
+<h4>Where will my application be hosted?</h4>
+<p>I prefer Azure. I've worked a lot with AWS and a little bit with Google Cloud if you insist on one of those, but I'm very comfortable with Azure.</p>
+<h4>How much will this cost?</h4>
+<p>Obviously different projects vary, but it's not unusual to be able to get a "bare bones" application up and running for around $10k.</p>
+<h4>How long will it take to get my application up and running?</h4>
+<p>Again, it will depend on your application, but six weeks is a decent ballpark of what to expect before anything is live.</p>
+<h4>What about security?</h4>
+<p>Good question. Hosting in Azure takes care of a lot of the security. I write and publish a lot of applications so I adhere to best practices. I also maintain insurance to cover against data breaches, etc. Until your application has proven viable, you may want to let me host it so that my insurance policy will cover it. There are details that need to be covered here, but this is an option.</p>
+<hr />
+<p>More questions? <a asp-action="Consultation" asp-controller="Home">Click here to schedule an initial consultation</a>.</p>
