--- a/Technicality.online/Views/Home/MVPs.cshtml
+++ b/Technicality.online/Views/Home/MVPs.cshtml
@@ -5,6 +5,7 @@
 
 <h1 class="display-4">Minimum Viable Products</h1>
 <h4>So - what exactly is an MVP? Saving time and money sounds good. What's the catch?</h4>
-<p><p>An MVP doesn't have to have all the bells and whistles - just enough core functionality to validate your idea. If it's not core functionality, good enough is good enough.</p>
-<p>One of the keys to rapid development is integrating with other tools and applications. With cloud computing and applications with APIs, it's easier (and cheaper) than ever to bring your idea to life. The key is understanding how everything works together. <a asp-action="Index" asp-controller="Services">Click here for some examples of the building blocks I've used in the past.</a> </p>
+<p>An MVP doesn't have to have all the bells and whistles - just enough core functionality to validate your idea. If it's not core functionality, good enough is good enough.</p>
+<p>Most applications have a "customer or user facing side" and an "admin side" used by internal staff. One shortcut in building an MVP is to focus on the customer side while leaving some of the admin functionality for later. For instance, instead of developing a lot of internally used reports, a developer can manually run queries against a database as needed and copy the results into a spreadsheet and email them to you. Eventually, you will want to automate things like this, but you "go live" without it. Your end users won't know the difference.</p>
+<p>One of the keys to rapid development is integrating with other tools and applications. With cloud computing and applications with APIs, it's easier (and cheaper) than ever to bring your idea to life. The key is understanding how everything works together. <a asp-action="Index" asp-controller="Toolbox">Click here for some examples of the building blocks in my "toolbox".</a> </p>
 <a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="FAQs" role="button">Questions?</a>
