--- a/Technicality.online/Views/Toolbox/Recaptcha.cshtml
+++ b/Technicality.online/Views/Toolbox/Recaptcha.cshtml
@@ -19,4 +19,4 @@
 <hr />
 <p>The email address on the home page of this site only loads after reCAPTCHA decides that the viewer is probably a human, as opposed to a bot harvesting email addresses. Notice that it loads a little slower than the rest of the text. (If you don't see an email address in the About section of the Home page, Google thinks you're a bot for some reason.)</p>
 <p><i>I only recently learned that CAPTCHA stands for "Completely Automated Public Turing test to tell Computers and Humans Apart". Alan Turing came up with the <a href="https://en.wikipedia.org/wiki/Turing_test" target="_blank">Turing Test</a>. The recent movie <a href="https://www.imdb.com/title/tt2084970/" target="_blank">"The Imitation Game"</a> is about him.</i></p>
-<p>If you'd like to talk about protecting your application from automated bots, <a href="https://app.acuityscheduling.com/schedule.php?owner=13759965">click here to schedule an initial consultation</a>.</p>
+<p>If you'd like to talk about protecting your application from automated bots, <a asp-action="Consultation" asp-controller="Home">click here to schedule an initial consultation</a>.</p>
