--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -2,42 +2,27 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="jumbotron">
-        <div class="row">
-            <div class="col-10">
-                <div class="row justify-content-center">
-                    <div class="h1 display-4">I build software MVPs</div>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="lead">(Minimum Viable Product)</div>
-                </div>
-            </div>
-            <div class="col-2">
-                <figure class="figure">
-                    <img class="img-fluid rounded" src="~/images/Jeff.png" alt="Jeff Trotman" />
-                    <figcaption class="figure-caption text-right">Jeff Trotman</figcaption>
+<div class="text-center">
+    <h1 class="display-4">Technology Waiters?</h1>
+</div>
+<div class="row">
+    <div class="col">Some people relate well to other people and some people are more comfortable interacting with computers. The latter type are necessities for technology companies but too many are staffed with only that type. To use a restaurant analogy, you can think of the first group of people as <b>waiters</b> and the second group as <b>cooks</b>.</div>
+</div>
+<hr />
+<div class="row">
+    <div class="h2">Cooks and Waiters</div>
+</div>
+<div class="row">
+    <div class="col">He makes delicious food (or writes good code or knows how to optimize your network traffic). Absolutely critical to the operation, but you don't really want to interact directly with him</div>
+    <div class="col"><img class="img-fluid" src="~/images/cook2.jpg" /></div>
+    <div class="col">She is a great communicator who can translate your wishes to the "cooks". Clearly answers your questions, makes good recommendations based on your input, sets realistic expectations, and keeps you up-to-date on progress.</div>
+    <div class="col"><img class="img-fluid" src="~/images/waiter2.jpg" /></div>
+</div>
+<hr />
+<div class="row">
+    <div class="h3">At Technicality, we understand that it takes both to ensure a great experience for you.</div>
+</div>
 
-                </figure>
-            </div>
-        </div>
-        
-        <hr />
-        <em>&quot;A Minimum Viable Product has just enough core features to effectively deploy the product, and no more.&quot;</em> - <a href="https://en.wikipedia.org/wiki/Minimum_viable_product" target="_blank">Wikipedia article</a>
 
-    </div>
-    <div class="row">
-        <div class="col">
-            <img class="img-fluid" src="~/images/shutterstock_393015229.jpg" alt="Code" />
-        </div>
-        <div class="col">
-            <p>You've got an idea that requires software development. Maybe it's a new SAAS product. Maybe a specialized online portal that consumes a data feed from another product's API or a mobile app that will help you serve your existing customers.</p>
-            <p>You think you're really onto something, but <b>software development is expensive</b> (Isn't it?) And - you don't really know anything about producing and hosting software.</p> 
-            <p>Before you spend a lot of money, you'd love some feedback to make sure your idea is as good as you think it is. It's one thing to tell someone about your idea, but you will get more meaningful feedback from actual users. How can users test something that doesn't exist yet? You need a <b>Minimum Viable Product</b>.</p>
-           
-            <a class="btn btn-primary btn-lg" asp-controller="Home" asp-action="MVPs" role="button">Learn More</a>
 
-        </div>
-    </div>
-    
-    
-    
+
