--- a/Technicality.online/Views/Shared/_Layout.cshtml
+++ b/Technicality.online/Views/Shared/_Layout.cshtml
@@ -46,21 +46,30 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="MVPs">MVPs</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ITServices">IT Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Process">Process</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CloudComputing">Cloud Computing</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="FAQs">FAQs</a>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Software Development
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item text-dark" asp-area="" asp-controller="Home" asp-action="SoftwareDevelopment">Overview</a>
+                                <a class="dropdown-item text-dark" asp-area="" asp-controller="Home" asp-action="MVPs">MVPs</a>
+                                <a class="dropdown-item text-dark" asp-area="" asp-controller="Home" asp-action="Process">Process</a>
+                                <a class="dropdown-item text-dark" asp-area="" asp-controller="Home" asp-action="FAQs">FAQs</a>
+                                <a class="dropdown-item text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
+                                <a class="dropdown-item text-dark" asp-area="" asp-controller="Toolbox" asp-action="Index">Toolbox</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Projects" asp-action="Index">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Toolbox" asp-action="Index">Toolbox</a>
-                        </li>
+
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
@@ -78,7 +87,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - Technicality LLC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2021 - Technicality LLC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
 
