--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -6,12 +6,23 @@
 
 <div class="text-center">
     <img src="~/images/TechnicalityLogo.jpg" class="img-fluid" alt="Technicality" />
-
-    <p>Technicality is consulting firm in Birmingham, AL specializing in helping clients transition their IT environment to take advantage of the reliability and cost savings provided by cloud computing.</p>
+    </div>
+<div class="row align-items-center">
+    <div class="col-10">
+        <div class="lead">
+            <div class="lead">Technicality is consulting firm in Birmingham, AL helping clients take advantage of cloud computing.</div>
+        </div>
+    </div>
+    <div class="col-2">
+        <img class="img-fluid" src="~/images/mspartnerlogo.png" />
+    </div>
+</div>
+<hr />
+    <h3>Leadership</h3>
     <div class="row">
         <div class="col-10">
-            <div class="row justify-content-center">
-                <div>Technicality is led by Jeff Trotman. Jeff has been in the technology business in Birmingham for over 25 years. His experience as a programmer, network administrator, CTO, and business owner all helps to understand whatever technology issues your business is facing.</div>
+            <div class="justify-content-center">
+                <div>Technicality is led by <a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a>. Jeff has been in the technology business in Birmingham for over 25 years.</div>
             </div>
         </div>
         <div class="col-2">
@@ -22,11 +33,14 @@
             </figure>
         </div>
     </div>
-        <div id="contact"></div>
-    </div>
+    <div id="contact"></div>
 
+    <hr />
     <div class="text-center">
-        <img class="img-fluid" src="~/images/shutterstock_101403709.jpg" />"
+        <figure class="figure">
+            <img class="img-fluid" src="~/images/shutterstock_101403709.jpg" />
+            <figcaption class="figure-caption">View of downtown from <a href="https://railroadpark.org" target="_blank">Railroad Park</a>, a catalyst for Birmingham's rejuvenation</figcaption>
+        </figure>
     </div>
     @section Scripts {
         <script src="https://www.google.com/recaptcha/api.js?render=6Lc0XLgUAAAAADraJQn_J8KSec6hTtYFIcJchkMm"></script>
