--- a/Technicality.online/Views/Home/CloudComputing.cshtml
+++ b/Technicality.online/Views/Home/CloudComputing.cshtml
@@ -5,3 +5,18 @@
 
 <h1>Cloud Computing</h1>
 
+<p><a href="https://azure.microsoft.com/en-us/" target="_blank">Azure</a> is Microsoft&#39;s cloud computing environment. Some frequently used features of Azure are:</p>
+<ul>
+    <li>Virtual Servers</li>
+    <li>Offsite backup</li>
+    <li>Web application hosting</li>
+    <li>Cloud storage</li>
+</ul>
+<p>You may already be using Azure without realizing it. If you are using Microsoft 365 (formerly Office 365), the user account you use for that is actually an Azure Active Directory account.</p>
+<p>Azure is very powerful, but it can be confusing when you are starting out. Technicality can help you navigate this process.</p>
+<hr />
+<p>Here is a short video from Microsoft outlining <i>4 Reasons SMBs Should Move to Microsoft Azure</i> </p>
+<video width="500" height="281" controls poster="https://technicalitystorage.blob.core.windows.net/public/4 Reasons to move to Azure image.jpg">
+    <source src="https://technicalitystorage.blob.core.windows.net/public/68888 Azure Within Reach 4Reasons Final.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+</video>
