--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -6,11 +6,11 @@
     <h1 class="display-4">Technology Waiters?</h1>
 </div>
 <div class="row">
-    <div class="col">Some people relate well to other people and some people are more comfortable interacting with computers. The latter type are necessities for technology companies but too many are staffed with only that type. To use a restaurant analogy, you can think of the first group of people as <b>waiters</b> and the second group as <b>cooks</b>.</div>
+    <div class="col">Some people relate well to other people while others are more comfortable interacting with computers. The latter type are necessities for technology companies but too many are staffed with only that type. To use a restaurant analogy, you can think of the first group of people as <b>waiters</b> and the second group as <b>cooks</b>.</div>
 </div>
 <hr />
 <div class="row">
-    <div class="h2">Cooks and Waiters</div>
+    <div class="h2">Cooks and Waiters - which one would you rather interact with?</div>
 </div>
 <div class="row">
     <div class="col">He makes delicious food (or writes good code or knows how to optimize your network traffic). Absolutely critical to the operation, but you don't really want to interact directly with him</div>
