--- a/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
+++ b/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
@@ -4,4 +4,34 @@
 }
 
 <h1>Software Development</h1>
-
+<p>Technicality can help you with any software development needs you have. Whether you need something simple, like importing and exporting data from different applications, or you need a full-blown applications, we can help you through this process.</p>
+<div class="row align-items-center">
+    <div class="col">
+        <img class="img-fluid" src="~/images/shutterstock_432008923.jpg" />
+    </div>
+    <div class="col">
+        <div class="h4">Software development related services:</div>
+        <ul>
+            <li>Designing your application's architecture</li>
+            <li>Coordinating graphic design and coding talent</li>
+            <li>Ensuring you end up with all of the assets (source code, images, etc.) you paid for</li>
+            <li>"Translating" technical jargon</li>
+            <li>Hosting applications in the cloud</li>
+            <li>Database administration</li>
+            <li>Continuous Integration/Continuous Deployment (CI/CD)</li>
+        </ul>
+    </div>
+</div>
+<h2>Example Projects</h2>
+<div class="row">
+    <div class="col">
+        Many of the projects we work on for clients are internal application that aren't targeted for the public. Here are some examples of projects that we own and operate:
+        <ul>
+            <li>@Html.ActionLink("Circlebox.com", "Circlebox", "Projects") - Web application to help leaders organize clubs and organizations</li>
+            <li>@Html.ActionLink("RCMChannels.com", "RcmChannels", "Projects") - Web application to help medical billing organizations track issues with their client physician practices</li>
+            <li>@Html.ActionLink("BallparkPilgrims.com", "BallparkPilgrims", "Projects") - Web application/community for baseball fans who enjoy visiting different stadiums</li>
+            <li>@Html.ActionLink("Technicality Google Analytics", "GoogleAnalyticsWordPressPlugin", "Projects") - WordPress plugin to inject Google Analytics tracking code</li>
+            <li>@Html.ActionLink("Pitch Counter", "PitchCounter", "Projects") - Android app to help youth baseball coaches track pitch counts</li>
+        </ul>
+    </div>
+</div>
