--- a/Technicality.online/Views/Home/ITServices.cshtml
+++ b/Technicality.online/Views/Home/ITServices.cshtml
@@ -5,3 +5,22 @@
 
 <h1>IT Services</h1>
 
+
+<p>Technicality can help you can manage your network and information technology environment for you so that everything just works.</p>
+<div class="row align-items-center">
+    <div class="col">
+        <img class="img-fluid" src="~/images/stock-photo-panel-of-network-switch-with-some-yellow-network-cables-54179128.jpg" />
+    </div>
+    <div class="col">
+        <div class="h4">IT management related services:</div>
+        <ul>
+            <li>Microsoft 365 management (formerly Office 365)</li>
+            <li>File and print servers</li>
+            <li>Networking and Internet service</li>
+            <li>Helpdesk</li>
+            <li>Phones and Telecom service</li>
+            <li>Migrating on-premise to cloud</li>
+        </ul>
+    </div>
+</div>
+<div class="lead">More and more companies are using Microsoft 365 but are scratching the surface of what their subscription offers. COVID-19 changed how we all work. Moving your IT environment to the cloud makes it much easier for your employees to work from anywhere.</div>
