--- a/Technicality.online/Views/Home/ITServices.cshtml
+++ b/Technicality.online/Views/Home/ITServices.cshtml
@@ -9,7 +9,7 @@
 <p>Technicality can help you can manage your network and information technology environment for you so that everything just works.</p>
 <div class="row align-items-center">
     <div class="col">
-        <img class="img-fluid" src="~/images/stock-photo-panel-of-network-switch-with-some-yellow-network-cables-54179128.jpg" />
+        <img class="img-fluid" src="~/images/shutterstock_54179128.jpg" />
     </div>
     <div class="col">
         <div class="h4">IT management related services:</div>
@@ -23,4 +23,4 @@
         </ul>
     </div>
 </div>
-<div class="lead">More and more companies are using Microsoft 365 but are scratching the surface of what their subscription offers. COVID-19 changed how we all work. Moving your IT environment to the cloud makes it much easier for your employees to work from anywhere.</div>
+<div>More and more companies are using Microsoft 365 but are scratching the surface of what their subscription offers. COVID-19 changed how we all work. Moving your IT environment to the cloud makes it much easier for your employees to work from anywhere.</div>
