--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -1,28 +1,17 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
-
-<div class="text-center">
-    <h1 class="display-4">Technology Waiters?</h1>
+﻿
+<div class="row justify-content-center">
+    <div class="col">
+        <img class="img-fluid" src="~/images/TechnicalityLogo.jpg" />
+    </div>
 </div>
+
 <div class="row">
-    <div class="col">Some people relate well to other people while others are more comfortable interacting with computers. The latter type are necessities for technology companies but too many are staffed with only that type. To use a restaurant analogy, you can think of the first group of people as <b>waiters</b> and the second group as <b>cooks</b>.</div>
+    <div class="col">
+        <h1>Helping clients take advantage of cloud technology</h1>
+        <p>Cloud technology is a game changer. It offers cost savings, reliability, and flexibility and allows small and medium businesses to compete with larger companies in ways that were previously unimaginable.   </p>
+        <p>Technicality is a boutique IT services firm. We can help you manage your existing infrastructure and get you started with your cloud migration.</p>
+    </div>
+    <div class="col">
+        <img class="img-fluid" src="~/images/shutterstock_622863563.jpg" />
+    </div>
 </div>
-<hr />
-<div class="row">
-    <div class="h2">Cooks and Waiters - which one would you rather interact with?</div>
-</div>
-<div class="row">
-    <div class="col">He makes delicious food (or writes good code or knows how to optimize your network traffic). Absolutely critical to the operation, but you don't really want to interact directly with him</div>
-    <div class="col"><img class="img-fluid" src="~/images/cook2.jpg" /></div>
-    <div class="col">She is a great communicator who can translate your wishes to the "cooks". Clearly answers your questions, makes good recommendations based on your input, sets realistic expectations, and keeps you up-to-date on progress.</div>
-    <div class="col"><img class="img-fluid" src="~/images/waiter2.jpg" /></div>
-</div>
-<hr />
-<div class="row">
-    <div class="h3">At Technicality, we understand that it takes both to ensure a great experience for you.</div>
-</div>
-
-
-
-
