in the Birmingham, AL metro area

--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -10,7 +10,7 @@
 <div class="row align-items-center">
     <div class="col-10">
         <blockquote class="blockquote">
-            <p>Technicality is boutique technology consulting firm located in Birmingham, AL.</p>
+            <p>Technicality is boutique technology consulting firm located in the Birmingham, AL metro area.</p>
         </blockquote>
     </div>
     <div class="col-2">
