--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -15,3 +15,10 @@
         <img class="img-fluid" src="~/images/shutterstock_622863563.jpg" />
     </div>
 </div>
+<div class="row">
+    <h3>What exactly is "The Cloud"?</h3>
+    <p>You hear lots of talk about the cloud, but if you're not sure exactly what it is - Microsoft has put together a <a href="https://news.microsoft.com/stories/microsoft-datacenter-tour/" target="_blank">virtual datacenter experience</a> to help explain.
+        <br />
+        <a href="https://news.microsoft.com/innovation-stories/microsofts-virtual-datacenter-grounds-the-cloud-in-reality/" target="_blank">Read more about it here.</a>
+    </p>
+</div>
